<resources>
    <string name="app_name">My Portfolio</string>

    <string name="action_about">About</string>
    <string name="nanodree_aps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>

</resources>
